--- a/index.html
+++ b/index.html
@@ -146,5 +146,15 @@
 
         </div>
     </main>
+
+    <footer>
+        <figure>
+            <img src="img/sinister.jpeg" alt="sinister-sx">
+            <figcaption>
+                <h6>Sinister</h6>
+                <span>Nome Brano</span>
+            </figcaption>
+        </figure>
+    </footer>
 </body>
 </html>
