conclusione-  domani finire ultimi particolari

--- a/index.html
+++ b/index.html
@@ -17,25 +17,29 @@
 
             <section class="menu-container">
                 <div class="menu-section">
-                    <img src="img/logo.svg" alt="Logo-spotify">
+                    <img id="Logo-normale"src="img/logo.svg" alt="Logo-spotify">
+                    <img id="Logo-small" src="img/logo-small.svg" alt="logo-small">
                     <a href="#"><img src="img/home.svg" alt="home-icon"><span>Home</span></a>
-                    <a href="#"><img src="img/search.svg" alt="search-icon">Cerca <a>
-                    <a href="#"><img src="img/libreria.svg" alt="search-icon">La tua libreria </a>
-                    <h2>PLAYLIST</h2>
-                    <a href="#" class="add-playlist"> <span>+</span> Crea Playlist</a>
+                    <a href="#"><img src="img/search.svg" alt="search-icon"><span>Cerca</span> <a>
+                    <a href="#"><img src="img/libreria.svg" alt="search-icon"><span>La tua libreria</span></a>
+                    <span><h2>PLAYLIST</h2></span>
+                    <div class="button">
+                        <a href="#" class="add-playlist"><span><span id="span-button">+</span></span></a>
+                        <a href="#" class="add-playlist"><span><span id="create-playlist">Crea Playlist</span></span></a>
+                    </div>
                     <ul class="playlist-list">
-                        <li><a href="#">Nome Playlist</a></li>
-                        <li><a href="#">Nome Playlist</a></li>
-                        <li><a href="#">Nome Playlist</a></li>
-                        <li><a href="#">Nome Playlist</a></li>
-                        <li><a href="#">Nome Playlist</a></li>
-                        <li><a href="#">Nome Playlist</a></li>
+                        <li><a href="#"><span>Nome Playlist</span></a></li>
+                        <li><a href="#"><span>Nome Playlist</span></a></li>
+                        <li><a href="#"><span>Nome Playlist</span></a></li>
+                        <li><a href="#"><span>Nome Playlist</span></a></li>
+                        <li><a href="#"><span>Nome Playlist</span></a></li>
+                        <li><a href="#"><span>Nome Playlist</span></a></li>
                     </ul>
                 </div>
                 <div class="last-section">
-                    <a href="#" class="download"> <img src="img/download.svg" alt="download"> Installa app</a>
+                    <a href="#" class="download"> <img src="img/download.svg" alt="download"> <span>Installa app</span></a>
                     <hr>
-                    <a id="user"><img src="img/profile.svg" alt="profilepc"> John Doe</a>
+                    <a id="user"><img src="img/profile.svg" alt="profilepc"> <span>John Doe</span></a>
                 </div>
             </section>
 
