--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <a href="#"><img src="img/search.svg" alt="search-icon"><span>Cerca</span> <a>
                     <a href="#"><img src="img/libreria.svg" alt="search-icon"><span>La tua libreria</span></a>
                     <span><h2>PLAYLIST</h2></span>
-                    <div class="button">
+                    <span class="button">
                         <a href="#" class="add-playlist"><span><span id="span-button">+</span></span></a>
                         <a href="#" class="add-playlist"><span><span id="create-playlist">Crea Playlist</span></span></a>
-                    </div>
+                    </span>
                     <ul class="playlist-list">
                         <li><a href="#"><span>Nome Playlist</span></a></li>
                         <li><a href="#"><span>Nome Playlist</span></a></li>
